--- a/model.ipynb
+++ b/model.ipynb
@@ -44,6 +44,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "pd.options.mode.chained_assignment = None\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from scipy.optimize import curve_fit\n",
