--- a/model.ipynb
+++ b/model.ipynb
@@ -87,13 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2015\n",
       "Projected population in 2021: 7.588832273016198 billion people\n",
       "Projected population in 2122: 10.935074819425619 billion people\n"
      ]
@@ -104,7 +105,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,24 +137,30 @@
     "yBR = BrDrGraph[\"BR\"]\n",
     "yDR = BrDrGraph[\"DR\"]\n",
     "\n",
+    "# sigmoid function\n",
     "def sigmoid(x, L ,x0, k, b):\n",
     "    y = L / (1 + np.exp(-k * (x - x0))) + b\n",
     "    return (y)\n",
     "\n",
+    "# give initial data to fit function\n",
     "p0BR = [max(yBR), np.median(x), 1, min(yBR)]\n",
     "p0DR = [max(yDR), np.median(x), 1, min(yDR)]\n",
     "\n",
+    "# fit data to a sigmoid curve\n",
     "poptBR, pcovBR = curve_fit(sigmoid, x, yBR, p0BR, method=\"dogbox\")\n",
     "poptDR, pcovDR = curve_fit(sigmoid, x, yDR, p0DR, method=\"dogbox\")\n",
     "\n",
+    "# add years to project to series\n",
     "i = 71\n",
     "while x[i] != 2122: \n",
     "    x[i + 1] = x[i] + 1\n",
     "    i = i + 1\n",
-    "    \n",
+    "   \n",
+    "# project birth and death rates based on sigmoid curve \n",
     "br = sigmoid(x, *poptBR)\n",
     "dr = sigmoid(x, *poptDR) * 1.69\n",
     "\n",
+    "# project total population growth for each year from 2015 to 2122\n",
     "results = {}\n",
     "results[t1] = p1\n",
     "for t in range(t1, 2122):\n",
